src/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-dev-ci-demo
  namespace: gitlab
  labels:
    app: gitlab-dev-ci
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 8000
      protocol: TCP
  selector:
    app: gitlab-dev-ci
