src/manifests/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-dev-ci-demo
  namespace: gitlab
  labels:
    app: gitlab-dev-ci
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: gitlab-dev-ci.com
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-dev-ci-demo
              servicePort: 8000
